@@ -1,5 +1,6 @@
 Version 0.0.9
-	
+	Create browser for internet services, support Magnatune and Jamendo
+
 Version 0.0.8 10.04.09
 	Interface improvements
 	Bugfixes
